--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,6 @@ plugins {
     id 'maven-publish'
     id 'com.github.johnrengelman.shadow' version '6.1.0'
     id 'io.freefair.lombok' version '5.3.0'
-    id 'io.freefair.aggregate-javadoc-jar' version '5.3.0'
 }
 
 dependencies {
@@ -29,6 +28,7 @@ allprojects {
 
     java {
         withSourcesJar()
+        withJavadocJar()
     }
 
     repositories {
