Ok, now javadocs are fixed

--- a/settings.gradle
+++ b/settings.gradle
@@ -6,3 +6,6 @@ include(':javac')
 project(':javac').projectDir = file('javac')
 include(':core')
 project(':core').projectDir = file('core')
+include(':main')
+project(':main').projectDir = file('main')
+
